--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
+  hello-world: sandbox-josh/hello-world@0.0.1
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
@@ -11,4 +12,4 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - welcome/run
-        context: "common"
+      - hello-world
