added check_ip command to orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ orbs:
         steps:
           - my_inline_command:
               greeting_name: <<parameters.greeting_name>>
-          - check_ip:
+          - check_ip
     commands:
       my_inline_command:
         parameters:
