--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ orbs:
                 export CIRCLE_CI_IP="$ip"
                 echo "SET CIRCLE_CI_IP: ${ip}"
                 echo "${CIRCLE_CI_IP}" > ./.envs/CIRCLE_CI_IP.env
-                echo "Circle CI public IP is $$CIRCLE_CI_IP"
+                echo "Circle CI public IP is $ip"
       cluster_update:
         parameters:
           zone:
@@ -63,7 +63,8 @@ orbs:
               name: Updating White Listed IP on clusters
               command: |
                 CIRCLE_CI_IP=`cat ./.envs/CIRCLE_CI_IP.env`
-                gcloud container clusters update --zone <<parameters.zone>> <<parameters.gcloud-project>> --enable-master-authorized-networks --master-authorized-networks <<parameters.ips>> 
+                echo $CIRCLE_CI_IP
+                gcloud container clusters update --zone <<parameters.zone>> <<parameters.gcloud-project>> --enable-master-authorized-networks --master-authorized-networks <<parameters.ips>>,"$CIRCLE_CI_IP"
 
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -74,4 +75,4 @@ workflows:
           name: Whitelisting Circle CI IP
           zone: us-west2-c 
           gcloud-project: onec-prod
-          ips: 157.131.134.210/32,35.236.8.106/32,$CIRCLE_CI_IP
+          ips: 157.131.134.210/32,35.236.8.106/32
