added missing param

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ orbs:
           - cluster_update:
               zone: <<parameters.zone>>
               gcloud-env: <<parameters.gcloud-env>>
+              gcloud-project: <<parameters.gcloud-project>>
               ips: <<parameters.ips>>
     commands:
       check_ip:
