--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ orbs:
               name: Initialize gcloud sdk
               command: |
                 echo $GCLOUD_SERVICE_KEY  
-                echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+                echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account jmachadosilva@oneconcern.com --key-file=-
                 gcloud --quiet config set project <<parameters.gcloud-project>>
                 gcloud --quiet config set compute/zone <<parameters.zone>>
                 gcloud --quiet container clusters get-credentials <<parameters.gcloud-env>>
